# mcp-gateway

./: Dockerfile  README.md  pyproject.toml  requirements.txt
mcp_gateway/: sanitizers.py  server.py
mcp_gateway/plugins/: README.md  __init__.py  manager.py
mcp_gateway/plugins/guardrails/: __init__.py  basic.py  lasso.py  presidio.py
mcp_gateway/plugins/tracing/: __init__.py  basic.py  xetrack.py
tests/: test_plugin_duplicates.py
