[project]
name = "mcp-hubspot"
version = "0.1.0"
description = "MCP HubSpot tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers==4.29.2",
    "sentencepiece==0.1.99",
    "sentence-transformers==2.2.2",
    "huggingface_hub==0.14.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
presidio = [
    "presidio-anonymizer>=2.2.0",
    "presidio-analyzer>=2.2.0",
]
xetrack = [
    "xetrack>=0.3.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_server_hubspot*"]
exclude = ["tests*", "docs*", "examples*"]
