[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0"
]
presidio = [
    "presidio-anonymizer>=2.2.0",
    "presidio-analyzer>=2.2.0"
]
xetrack = [
    "xetrack>=0.3.4"
]
hubspot = [
    "mcp-hubspot @ file://./tools/mcp-hubspot"
]

[project.scripts]
mcp-gateway = "mcp_gateway.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_gateway*"]
exclude = ["data*", "front*", "tests*"]

[tool.setuptools.package-data]
"*" = ["docs/*.png"]
